Edited prob distributions

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ minima:
     twitter: ladidinesh
     github: dineshladi
     linkedin: dineshladi
-    email: ladidinesh@gmai.com
+    email: ladidinesh@gmail.com
 
 # Set this to true to get LaTeX math equation support
 use_math: true
